--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>My Basic HTML Page</title>
 </head>
 <body>
+  <h1>test page</h1>
 <script>
     // Check if the browser supports speech synthesis
 if ('speechSynthesis' in window) {
