--- a/index.html
+++ b/index.html
@@ -1,43 +1,38 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>My Basic HTML Page</title>
-</head>
-<body>
-  <h1>test page</h1>
-<script>
-    // Check if the browser supports speech synthesis
-if ('speechSynthesis' in window) {
-  // Create a new SpeechSynthesisUtterance object
-  var message = new SpeechSynthesisUtterance();
-
-  // Set the text to be spoken
-  message.text = "Hello, world!";
-
-  // Optional: Set the voice
-  // You can fetch available voices using speechSynthesis.getVoices() and select the desired one
-  // For example:
-  // message.voice = speechSynthesis.getVoices().find(voice => voice.lang === 'en-US');
-
-  // Optional: Set other properties like rate, pitch, volume, etc.
-  // For example:
-  // message.rate = 1.2;
-  // message.pitch = 0.8;
-
-  // Function to start speaking the text
-  function speakText() {
-    // Start speech synthesis
-    speechSynthesis.speak(message);
-  }
-
-  // Call the speakText function to start speaking the text
-  speakText();
-} else {
-  // Speech synthesis not supported
-  console.log("Speech synthesis is not supported in this browser.");
-}
-</script>
-
-    </body>
+<html lang="en">
+  <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/style.css" />
+    <title>Text to Speech</title>
+  </head>
+  <body class="container mt-5 bg-dark">
+    <h1 class="text-light">Text to Speech</h1>
+    <p class="lead text-light mt-4">Select Voice</p>
+    <select id="voices" class="form-select bg-secondary text-light"></select>
+    <div class="d-flex mt-4 text-light">
+      <div>
+        <p class="lead">Volume</p>
+        <input type="range" min="0" max="1" value="1" step="0.1" id="volume" />
+        <span id="volume-label" class="ms-2">1</span>
+      </div>
+      <div class="mx-5">
+        <p class="lead">Rate</p>
+        <input type="range" min="0.1" max="10" value="1" id="rate" step="0.1" />
+        <span id="rate-label" class="ms-2">1</span>
+      </div>
+      <div>
+        <p class="lead">Pitch</p>
+        <input type="range" min="0" max="2" value="1" step="0.1" id="pitch" />
+        <span id="pitch-label" class="ms-2">1</span>
+      </div>
+    </div>
+    <textarea class="form-control bg-dark text-light mt-5" cols="30" rows="10" placeholder="Type here..."></textarea>
+    <div class="mb-5">
+      <button id="start" class="btn btn-success mt-5 me-3">Start</button>
+      <button id="pause" class="btn btn-warning mt-5 me-3">Pause</button>
+      <button id="resume" class="btn btn-info mt-5 me-3">Resume</button>
+      <button id="cancel" class="btn btn-danger mt-5 me-3">Cancel</button>
+    </div>
+  </body>
+  <!-- script tag goes here -->
+  <script src="assets/script.js"></script>
 </html>
-
